pong-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-pong-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: pong-app
  template:
    metadata:
      labels:
        app: pong-app
    spec:
      containers:
        - name: pong-app
          image: pimpbot9000/pong-app:ubuntu
