pong-app/service-ClusterIP.yaml
# A ClusterIP type Service resource gives the Service an 
# internal IP that'll be accessible in the cluster.

# Works on layer 4 (transport, TCP)

apiVersion: v1
kind: Service
metadata:
  name: ssh-nuke-service2
spec:
  type: ClusterIP
  selector:
    app: the-nuke-pod # This is the app as declared in the deployment.
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3000
